# element-iot-api

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.in  setup.cfg  tox.ini
.github/workflows/: ci.yml
docs/src/: conf.py  examples.md  index.md
docs/src/api/: element.md  parsers.md  schemas.md
element/: element_api.py  parsers.py  schemas.py
testing/api_resp/: device.json  devices_1.json  devices_2.json  devices_short.json  empty_resp.json  folders_1.json  folders_2.json  packets_by_device_DEC0054A6.json  packets_by_folder_streamed.txt  packets_by_folder_streamed_error.txt  readings_DEC0054A6.json  readings_DEC0054A6_no_data.json  readings_DEC0054A6_short_streamed.txt  readings_DEC0054A6_short_streamed_error.txt  readings_DEC0054A6_short_streamediso8601.txt  readings_DEC0054B0.json
tests/: element_test.py  parser_test.py
