[metadata]
name = element_api
version = 0.1.1
description =  library to interact with the element IoT platform
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RUBclim/element-api
author = Jonas Kittner
author_email = jkittner@users.noreply.github.com
license = MIT
license_files = LICENCE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    pandas
python_requires = >=3.11

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True

[coverage:run]
parallel = True
plugins = covdefaults

[coverage:report]
fail_under = 98

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
